<resources>
    <string name="app_name">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

    <string name="monFr">Lundi</string>
    <string name="tueFr">Mardi</string>
    <string name="wedFr">Mercredi</string>
    <string name="thuFr">Jeudi</string>
    <string name="friFr">Vendredi</string>
    <string name="satFr">Samedi</string>
    <string name="sunFr">Dimanche</string>
    <string name="partly_cloudy_n24c_31c">Partly Cloudy\n24C - 31C</string>
    <string name="showers_n24c_30c">Showers\n24C - 30C</string>
    <string name="rain_n22c_23c">Rain\n22C - 23C</string>
    <string name="scattered_showers_n22c_27c">Scattered Showers\n22C - 27C</string>
    <string name="mostly_cloudy_n22c_30c">Mostly Cloudy\n22C - 30C</string>
    <string name="thunderstorms_n25c_28c">Thunderstorms\n25C - 28C</string>
    <string name="scattered_thunderstorms_n24c_27c">Scattered Thunderstorms\n24C - 27C</string>
    <string name="showers_n24c_26c">Showers\n24C - 26C</string>
    <string name="scattered_thunderstorms_n23c_27cc">Scattered Thunderstorms\n23C - 27CC</string>
    <string name="refresh">REFRESHHHHHHH!!!!!!!</string>
    <string name="setting">SETTING</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_pref">PrefActivity</string>


    <string name="server_response">some sample json here</string>
</resources>