<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="horizontal">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ForecastFragment"
        android:orientation="vertical"
        android:background="@color/white"
        >


        <!-- TODO: Update blank fragment layout -->
    <!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment" />
    -->

        <!--   Monday #1 +++++++++++++++++++++++++++++++++++++++++++++ -->
        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#dfdfff"
            android:id="@+id/mon1"
            android:orientation="horizontal"
            />
        -->

        <!--
        put the line below in every Linear Layout tag:

        android:background="dfdfff"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:paddingVertical="15dp"

                android:text="@string/monFr"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/cloudy"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="25dp"
                android:text="@string/partly_cloudy_n24c_31c"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <!--   Tuesday #1 +++++++++++++++++++++++++++++++++++++++++++++ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:paddingVertical="15dp"

                android:text="@string/tueFr"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/rainnshowers"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="25dp"
                android:text="@string/showers_n24c_30c"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <!--   Wednesday #1 +++++++++++++++++++++++++++++++++++++++++++++ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:paddingVertical="15dp"

                android:text="@string/wedFr"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/rainnshowers"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="25dp"
                android:text="@string/rain_n22c_23c"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <!--   Thursday #1 +++++++++++++++++++++++++++++++++++++++++++++ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:paddingVertical="15dp"

                android:text="@string/thuFr"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/chanceofstorm"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="25dp"
                android:text="@string/scattered_showers_n22c_27c"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <!--   Friday #1 +++++++++++++++++++++++++++++++++++++++++++++ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:paddingVertical="15dp"

                android:text="@string/friFr"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/cloudy"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="25dp"
                android:text="@string/mostly_cloudy_n22c_30c"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <!--   Saturday #1 +++++++++++++++++++++++++++++++++++++++++++++ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:paddingVertical="15dp"

                android:text="@string/satFr"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/cloudy"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="25dp"
                android:text="@string/partly_cloudy_n24c_31c"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <!--   Sunday #1 +++++++++++++++++++++++++++++++++++++++++++++ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:paddingVertical="15dp"

                android:text="@string/sunFr"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/storm"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="25dp"
                android:text="@string/thunderstorms_n25c_28c"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <!--   Monday #2 +++++++++++++++++++++++++++++++++++++++++++++ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:paddingVertical="15dp"

                android:text="@string/monFr"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/chanceofstorm"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="25dp"
                android:text="@string/scattered_thunderstorms_n24c_27c"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <!--   Tuesday #2 +++++++++++++++++++++++++++++++++++++++++++++ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:paddingVertical="15dp"

                android:text="@string/tueFr"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/rainnshowers"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="25dp"
                android:text="@string/showers_n24c_26c"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <!--   Wednesday #2 +++++++++++++++++++++++++++++++++++++++++++++ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:paddingBottom="60dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:paddingVertical="15dp"

                android:text="@string/wedFr"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/chanceofstorm"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="25dp"
                android:text="@string/scattered_thunderstorms_n23c_27cc"
                android:textSize="15.5dp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:paddingBottom="60dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="I'm so lazy to change all app to Vn-ese :))))"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>